primera version responsive

--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -31,3 +31,10 @@ body {
 .titulo_intermedio {
     font-weight: bold;
 }
+
+@media screen and (min-width: 768px) {
+    .container {
+        padding-left: calc((100% - 940px)/2);
+        padding-right: calc((100% - 940px)/2);
+    }
+}
