--- a/asset/css/menu.css
+++ b/asset/css/menu.css
@@ -18,3 +18,10 @@
     display:none;
 }
 
+@media screen and (min-width:900px) {
+    .menu__item__escritorio {
+        display:flex;
+    }
+    
+    
+}
