--- a/asset/css/formacionacademica.css
+++ b/asset/css/formacionacademica.css
@@ -1,45 +1,64 @@
-.formacion__general {
-    background: #EAF2FD;
+.formaciones {
+    /* background: #dab997; */
     display: flex;
-    flex-direction: column ;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    padding: 3rem 0 0 3rem;
     align-items: center;
-    padding: 16px;
-    box-shadow: 0 2px 10px 2px #00000010;
 }
 
-.formacion__titulo{
+.formacion__titulo {
     font-weight: bold;
     text-align: center;
-    margin-bottom: 2rem;
-    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    font-size: 1.5rem;  
 }
 
-.formacion__container {
+.formacion {
+    background: #fdfdfd;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: start;
-    padding: 0px;
-    gap: 10px;
-    margin-top: 35px; 
+    margin-right: 3rem;
+    margin-bottom: 4rem;
 }
 
-.formacion___titulo {
+.formacion__caja__imagen{
+    height: auto;
+    width: 288px;
+    box-shadow: 0 2px 10px 2px #00000010;
+}
+
+.formacion__imagen  {
+    height: 150px;
+    width: 200px;
+    display: flex;
+    margin: auto
+}
+
+.formacion__contenido {
+    align-items: center ;
+    padding: 1rem;
+    width: 256px;
+}
+
+.formacion__subtitulo {
+    font-size: 1rem;
     display: flex;
     font-weight: bold;
     text-decoration: underline;
+    line-height: 1.5;
 }
 
-.formacion___texto {
-    width: 300px;
-    display: flex;
-    
-    text-align: center;
+.formacion__descripcion {
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: justify;
+    margin-top: 4px;
 }
 
-.formacion__imagen {
-    display: flex;
-    height: 150px;
-    width: 300px;
-    box-shadow: 0 2px 10px 2px #00000010;
-}
+
+
+
+
