--- a/asset/css/hobbies.css
+++ b/asset/css/hobbies.css
@@ -15,7 +15,8 @@
 .hobbies__titulo{
     font-weight: bold;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
     font-size: 1.5rem;
 }
 
