--- a/asset/css/panelprueba.css
+++ b/asset/css/panelprueba.css
@@ -1,35 +1,65 @@
-.formacion__ppl {
-    gap: 16px;
+/*.experiencias {
+    /* background: #dab997;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 3rem 0 0 3rem;
+
 }
 
-.formacion__container {
+.experiencia__titulo {
+    font-weight: bold;
+    text-align: center;
+    margin-top: 1.5rem;
+    font-size: 1.5rem;  
+}
+
+.experiencia {
+    background: #fdfdfd;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    padding: 0px;
-    gap: 10px;
-    margin-top: 35px;
-}
-
-
-.formacion {
-    box-shadow: 0 2px 10px 5px #00000020;
-    padding: 16px;
-    display: flex;
-    flex-direction: column ;
-    margin: 0px;
     align-items: center;
+    margin-right: 3rem;
+    margin-bottom: 4rem;
 }
 
-.formacionl___titulo {
+.experiencia__caja__imagen{
+    height: auto;
+    width: 288px;
+    box-shadow: 0 2px 10px 2px #00000010;
+}
+
+.experiencia__imagen  {
+    height: 150px;
+    width: 200px;
+    display: flex;
+    margin: auto
+}
+
+.experiencia__contenido {
+    padding: 1rem;
+    width: 256px;
+}
+
+.experiencia__subtitulo {
+    font-size: 1rem;
     display: flex;
     font-weight: bold;
     text-decoration: underline;
-}
-
-.formacion__imagen {
-    display: block;
-    height: 150px;
-    width: 300px;
+    line-height: 1.5;
     
 }
+
+.experiencia__descripcion {
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-top: 4px;
+}
+
+.experiencia_boton {
+    display: flex;
+    align-items: flex-end;
+    gap: 16px;
+}
+
+*/
+ 
