--- a/asset/css/skill.css
+++ b/asset/css/skill.css
@@ -1,3 +1,7 @@
+.skill{
+    border-bottom: 1.5px solid;
+    border-style: groove;
+}
 .skill__titulo {
     padding: 16px;
 }
@@ -15,7 +19,9 @@
 .skill__titulo{
     font-weight: bold;
     text-align: center;
-    margin-bottom: 2rem;
+    
+    margin-top: 1rem;
+    margin-bottom: .5rem;
     font-size: 1.5rem;
 }
 
