--- a/asset/css/sobremi.css
+++ b/asset/css/sobremi.css
@@ -3,11 +3,24 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 16px;
+    justify-content: center;
+    padding: 32px;
     gap: 10px;
 }
 
 .sobremi__firma {
     width: 140px;
     height: 52px;
+}
+
+@media screen and (min-width:900px) {
+    .sobremi {
+        padding: 22px; 
+    }
+}
+
+@media screen and (min-width:900px) {
+    .sobremi {
+        padding: 32px; 
+    }
 }
