--- a/asset/css/experienciaprofesional.css
+++ b/asset/css/experienciaprofesional.css
@@ -2,7 +2,10 @@
     /* background: #dab997; */
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
     padding: 3rem 0 0 3rem;
+    align-items: center;
 
 }
 
@@ -63,13 +66,7 @@
     gap: 16px;
 }
 
-.boton {
-    background: brown;
-    color: #fdfdfd;
-    border: none;
-    border-radius: 5px;
-    height: 30px;
-}
+
 
 @media screen and (min-width:768px) {
     .experiencia__imagen  {
