--- a/asset/css/hobbies.css
+++ b/asset/css/hobbies.css
@@ -9,7 +9,11 @@
     align-items: center;
     justify-content: center;
     padding: 16px;
-    gap: 40px;
+    gap: 32px;
+}
+
+.hobbies__item {
+    padding: 20px;
 }
 
 .hobbies__titulo{
