--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -32,7 +32,7 @@ body {
     font-weight: bold;
 }
 
-.boton {
+.boton, .formulario__btn {
     background: (251,251,251);
     opacity: 1;
     color: black;
@@ -40,14 +40,14 @@ body {
     height: 30px;
 }
 
-.boton:hover{
+.boton:hover, .formulario__btn:hover{
     background:teal;
     color: white;
     border: 1px solid brown;
 
 }
 
-.boton:visited {
+.boton:visited, .formulario__btn:visited {
     background: steelblue;
     color: white;
 }
@@ -67,6 +67,7 @@ a:visited {
 @media screen and (min-width: 900px) {
     .boton {
         height: 40px;
+       
     }
 }
 
