--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -22,34 +22,42 @@
 
     --montserrat: 'Montserrat', sans-serif;
     --open-sans: 'Open Sans', sans-serif;
-}
-
+    --neon: 'Tilt Neon', cursive;
+   
 body {
-    font-family: var(--montserrat);
+    font-family: var(--neon);
 }
 
 .titulo_intermedio {
     font-weight: bold;
 }
 
-.boton, .formulario__btn {
-    background: (251,251,251);
+.boton {
+    /* background: (251,251,251); */
     opacity: 1;
     color: black;
     border-radius: 5px;
     height: 30px;
+    font-family: var(--neon);
+    letter-spacing: 3px;
+    background: #e59142;
+    box-shadow: 0px 0px 3px 3px lightgray;
 }
 
 .boton:hover, .formulario__btn:hover{
     background:teal;
     color: white;
     border: 1px solid brown;
+    font-family: var(--neon);
+    letter-spacing: 3px;
 
 }
 
 .boton:visited, .formulario__btn:visited {
     background: steelblue;
     color: white;
+    font-family: var(--neon);
+    letter-spacing: 3px;
 }
 
 a:visited {
@@ -62,11 +70,15 @@ a:visited {
         padding-left: calc((100% - 940px)/2);
         padding-right: calc((100% - 940px)/2);
     }
+    
 }
+
 
 @media screen and (min-width: 900px) {
     .boton {
         height: 40px;
+        background: #e59142;
+        box-shadow: 0px 0px 3px 3px lightgray;
        
     }
 }
