--- a/asset/css/experienciaprofesional.css
+++ b/asset/css/experienciaprofesional.css
@@ -6,14 +6,22 @@
     justify-content: center;
     padding: 3rem 0 0 3rem;
     align-items: center;
+    font-family: var(--neon);
 
 }
 
 .experiencia__titulo {
-    font-weight: bold;
+    
     text-align: center;
     margin-top: 1.5rem;
     font-size: 1.5rem;  
+    font-family: var(--neon);
+    font-weight: bold;
+    letter-spacing: 3px;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #e59142;
+    text-shadow: 2px 0px lightgray
 }
 
 .experiencia {
@@ -63,9 +71,17 @@
     display: flex;
     align-items: center;
     margin-top: 4px;
-    gap: 16px;
+    gap: 16px;   
 }
 
+.boton {
+    background: #e59142;
+    box-shadow: 0px 0px 3px 3px lightgray;
+    color: whitesmoke;
+    height: 30px;
+    border-radius: 10px;
+    border: none;
+}
 
 
 @media screen and (min-width:768px) {
