--- a/asset/css/formacionacademica.css
+++ b/asset/css/formacionacademica.css
@@ -1,18 +1,35 @@
+.formacion__general {
+    background :#49d0be;
+    font-family: var(--neon);
+    letter-spacing: 1.5px;
+
+}
+
+
 .formaciones {
-    /* background: #dab997; */
+    
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     padding: 3rem 0 0 3rem;
     align-items: center;
+    
+   
 }
 
 .formacion__titulo {
+    letter-spacing: 3px;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #e59142;
+    text-shadow: 2px 0px white;
     font-weight: bold;
     text-align: center;
-    margin-top: 1.5rem;
+    margin-top: 3rem;
+    padding-top: 2rem;
     font-size: 1.5rem;  
+    
 }
 
 .formacion {
@@ -22,12 +39,14 @@
     align-items: center;
     margin-right: 3rem;
     margin-bottom: 4rem;
+    border-radius: 10px;
 }
 
 .formacion__caja__imagen{
     height: auto;
     width: 288px;
     box-shadow: 0 2px 10px 2px #00000010;
+    
 }
 
 .formacion__imagen  {
